...
        _actionBtn(
          label: 'RED',
          color: DemoColors.red,
          entryType: 'red_button_pressed',
        ),
        _actionBtn(
          label: 'GREEN',
          color: DemoColors.green,
          entryType: 'green_button_pressed',
        ),
        _actionBtn(
          label: 'BLUE',
          color: DemoColors.blue,
...
